<resources>
    <string name="app_name">UI Recipe</string>
    <string name="author">ADITYA BHARDWAJ</string>

    <!-- Bottom Navigation -->
    <string name="adobeXD">Adobe XD</string>
    <string name="sketch">Sketch</string>
    <string name="figma">Figma</string>
    <string name="more">More</string>

    <!-- Firebase Used Variables -->
    <string name="firestore_xd">xd</string>
    <string name="firestore_figma">figma</string>
    <string name="firestore_sketch">sketch</string>

    <!-- Toolbar Options -->
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="mobile">Mobile</string>
    <string name="website">Website</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="select_category">Select Category</string>
    <string name="search_results">Search Results</string>
    <string name="apply">Apply</string>

    <!-- Toast Messages -->
    <string name="category_not_found">Please Select Category</string>
    <string name="download_failed">Download Failed.</string>
    <string name="download_success">File saved in Downloads Folder.</string>
    <string name="download_progress">Downloading UI Resource…</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="fetch_error">Something went wrong</string>
    <string name="no_internet_error">Please check your Internet</string>
    <string name="no_results">No Results Found.</string>
    <string name="open_link_via">Open link via</string>
    <string name="share_link_via">Share link via</string>

    <!-- Settings Page -->
    <string name="settings">Settings</string>
    <string name="rate_app">Rate App</string>
    <string name="privacy">Privacy</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="app_version">App Version 1.5.0</string>

    <!-- Information Page -->
    <string name="designer">Designer</string>
    <string name="source">Source</string>
    <string name="ui_image">UI Image</string>
    <string name="button">Button</string>

    <!-- Ad's & Messaging -->
    <string name="ad">Ad</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="channel_description">This is my default notification channel</string>


    <!-- Testing ID's -->
        <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
        <string name="adobe_xd_ads">ca-app-pub-3940256099942544/2247696110</string>
        <string name="figma_ads">ca-app-pub-3940256099942544/2247696110</string>
        <string name="sketch_ads">ca-app-pub-3940256099942544/2247696110</string>
        <string name="ui_details_ads">ca-app-pub-3940256099942544/2247696110</string>

    <!-- Real ID's -->
<!--    <string name="app_id">ca-app-pub-5040281513434473~9707474917</string>-->
<!--    <string name="adobe_xd_ads">ca-app-pub-5040281513434473/4239170597</string>-->
<!--    <string name="figma_ads">ca-app-pub-5040281513434473/6889739880</string>-->
<!--    <string name="sketch_ads">ca-app-pub-5040281513434473/2076041682</string>-->
<!--    <string name="ui_details_ads">ca-app-pub-5040281513434473/9762960017</string>-->

</resources>